--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -1,8 +1,12 @@
 ﻿l_english:
- syndicalism:0 "Rev. Syndicalism"
- syndicalism_noun:0 "Revolutionary Syndicalist"
- syndicalist_desc:0 "A revolutionary syndicalist regime"
- syndicalism_desc:0 "Revolutionary Syndicalism"
+ vanguardism:0 "Rev. Vanguardism"
+ vanguardism_noun:0 "Revolutionary Vanguardist"
+ vanguardist_desc:0 "A revolutionary vanguardist regime"
+ vanguardism_desc:0 "Revolutionary Vanguardism"
+ syndicalism:0 "Anarcho-syndicalism"
+ syndicalism_noun:0 "Anarcho-syndicalist"
+ syndicalist_desc:0 "An anarcho-syndicalist regime"
+ syndicalism_desc:0 "Anarcho-syndicalism"
  socialism:0 "Lib. Socialism"
  socialism_noun:0 "Liberal Socialist"
  socialist_desc:0 "A liberal socialist regime"
