--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- vanguardism:0 "Rev. Vanguardism"
+ vanguardism:0 "Revolutionary Vanguardism"
  vanguardism_noun:0 "Revolutionary Vanguardist"
  vanguardist_desc:0 "A revolutionary vanguardist regime"
  vanguardism_desc:0 "Revolutionary Vanguardism"
@@ -7,15 +7,15 @@
  syndicalism_noun:0 "Anarcho-syndicalist"
  syndicalist_desc:0 "An anarcho-syndicalist regime"
  syndicalism_desc:0 "Anarcho-syndicalism"
- socialism:0 "Lib. Socialism"
+ socialism:0 "Liberal Socialism"
  socialism_noun:0 "Liberal Socialist"
  socialist_desc:0 "A liberal socialist regime"
  socialism_desc:0 "Liberal Socialism"
- conservatism:0 "Auth. Conservatism"
+ conservatism:0 "Authoritarian Conservatism"
  conservatism_noun:0 "Authoritarian Conservatist"
  conservatistic_desc:0 "An authoritarian conservatistic regime"
  conservatism_desc:0 "Authoritarian Conservatism"
- nationalism:0 "Tot. Nationalism"
+ nationalism:0 "Totalitarian Nationalism"
  nationalism_noun:0 "Totalitarian Nationalist"
  nationalist_desc:0 "A totalitarian nationalist regime"
  nationalism_desc:0 "Totalitarian Nationalism"
