--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -32,38 +32,6 @@
  ALB_nationalism_DEF:0 "The Albania"
  ALB_nationalism:0 "Albania"
  #####################################################################################
- ALI_vanguardism_ADJ:0 "Austrian"
- ALI_vanguardism_DEF:0 "The Austrian Littoral"
- ALI_vanguardism:0 "Austrian Littoral"
- ALI_syndicalism_ADJ:0 "Austrian"
- ALI_syndicalism_DEF:0 "The Austrian Littoral"
- ALI_syndicalism:0 "Austrian Littoral"
- ALI_socialism_ADJ:0 "Austrian"
- ALI_socialism_DEF:0 "The Austrian Littoral"
- ALI_socialism:0 "Austrian Littoral"
- ALI_conservatism_ADJ:0 "Austrian"
- ALI_conservatism_DEF:0 "The Austrian Littoral"
- ALI_conservatism:0 "Austrian Littoral"
- ALI_nationalism_ADJ:0 "Austrian"
- ALI_nationalism_DEF:0 "The Austrian Littoral"
- ALI_nationalism:0 "Austrian Littoral"
- #####################################################################################
- ANG_vanguardism_ADJ:0 "Angolan"
- ANG_vanguardism_DEF:0 "The Angola"
- ANG_vanguardism:0 "Angola"
- ANG_syndicalism_ADJ:0 "Angolan"
- ANG_syndicalism_DEF:0 "The Angola"
- ANG_syndicalism:0 "Angola"
- ANG_socialism_ADJ:0 "Angolan"
- ANG_socialism_DEF:0 "The Angola"
- ANG_socialism:0 "Angola"
- ANG_conservatism_ADJ:0 "Angolan"
- ANG_conservatism_DEF:0 "The Angola"
- ANG_conservatism:0 "Angola"
- ANG_nationalism_ADJ:0 "Angolan"
- ANG_nationalism_DEF:0 "The Angola"
- ANG_nationalism:0 "Angola"
- #####################################################################################
  ARG_vanguardism_ADJ:0 "Argentinian"
  ARG_vanguardism_DEF:0 "The Argentina"
  ARG_vanguardism:0 "Argentina"
@@ -109,8 +77,8 @@
  AUS_conservatism_DEF:0 "The Austria"
  AUS_conservatism:0 "Austria"
  AUS_nationalism_ADJ:0 "Austrian"
- AUS_nationalism_DEF:0 "The Austria"
- AUS_nationalism:0 "Austria"
+ AUS_nationalism_DEF:0 "The Groß-Österreich"
+ AUS_nationalism:0 "Groß-Österreich"
  #####################################################################################
  BAL_vanguardism_ADJ:0 "Baltic"
  BAL_vanguardism_DEF:0 "The Deutsch-Baltikum"
@@ -141,12 +109,12 @@
  BEL_conservatism_DEF:0 "The Belgium"
  BEL_conservatism:0 "Belgium"
  BEL_nationalism_ADJ:0 "Belgian"
- BEL_nationalism_DEF:0 "The Belgium"
- BEL_nationalism:0 "Belgium"
+ BEL_nationalism_DEF:0 "The Belgique Rexiste"
+ BEL_nationalism:0 "Belgique Rexiste"
  #####################################################################################
  BLR_vanguardism_ADJ:0 "Litbelian"
- BLR_vanguardism_DEF:0 "The Litbel"
- BLR_vanguardism:0 "Litbel"
+ BLR_vanguardism_DEF:0 "The Litbel SSR"
+ BLR_vanguardism:0 "Litbel SSR"
  BLR_syndicalism_ADJ:0 "Litbelian"
  BLR_syndicalism_DEF:0 "The Litbel"
  BLR_syndicalism:0 "Litbel"
@@ -234,59 +202,59 @@
  BUK_socialism_DEF:0 "The Bukhara"
  BUK_socialism:0 "Bukhara"
  BUK_conservatism_ADJ:0 "Bukharan"
- BUK_conservatism_DEF:0 "The Bukhara"
- BUK_conservatism:0 "Bukhara"
+ BUK_conservatism_DEF:0 "The Emirate of Bukhara"
+ BUK_conservatism:0 "Emirate of Bukhara"
  BUK_nationalism_ADJ:0 "Bukharan"
  BUK_nationalism_DEF:0 "The Bukhara"
  BUK_nationalism:0 "Bukhara"
  #####################################################################################
- BUL_vanguardism_ADJ:0 "Bulgaria"
- BUL_vanguardism_DEF:0 "The Bulgarian"
- BUL_vanguardism:0 "Bulgarian"
- BUL_syndicalism_ADJ:0 "Bulgaria"
- BUL_syndicalism_DEF:0 "The Bulgarian"
- BUL_syndicalism:0 "Bulgarian"
+ BUL_vanguardism_ADJ:0 "Bulgarian"
+ BUL_vanguardism_DEF:0 "The Bulgaria"
+ BUL_vanguardism:0 "Bulgaria"
+ BUL_syndicalism_ADJ:0 "Bulgarian"
+ BUL_syndicalism_DEF:0 "The Bulgaria"
+ BUL_syndicalism:0 "Bulgaria"
  BUL_socialism_ADJ:0 "Bulgaria"
- BUL_socialism_DEF:0 "The Bulgarian"
- BUL_socialism:0 "Bulgarian"
- BUL_conservatism_ADJ:0 "Bulgaria"
- BUL_conservatism_DEF:0 "The Bulgarian"
- BUL_conservatism:0 "Bulgarian"
- BUL_nationalism_ADJ:0 "Bulgaria"
- BUL_nationalism_DEF:0 "The Bulgarian"
- BUL_nationalism:0 "Bulgarian"
+ BUL_socialism_DEF:0 "The Bulgaria"
+ BUL_socialism:0 "Bulgaria"
+ BUL_conservatism_ADJ:0 "Bulgarian"
+ BUL_conservatism_DEF:0 "The Tsardom of Bulgaria"
+ BUL_conservatism:0 "Tsardom of Bulgaria"
+ BUL_nationalism_ADJ:0 "Bulgarian"
+ BUL_nationalism_DEF:0 "The Bulgaria"
+ BUL_nationalism:0 "Bulgaria"
  #####################################################################################
- BUR_vanguardism_ADJ:0 "Burma"
- BUR_vanguardism_DEF:0 "The Burmese"
- BUR_vanguardism:0 "Burmese"
- BUR_syndicalism_ADJ:0 "Burma"
- BUR_syndicalism_DEF:0 "The Burmese"
- BUR_syndicalism:0 "Burmese"
- BUR_socialism_ADJ:0 "Burma"
- BUR_socialism_DEF:0 "The Burmese"
- BUR_socialism:0 "Burmese"
- BUR_conservatism_ADJ:0 "Burma"
- BUR_conservatism_DEF:0 "The Burmese"
- BUR_conservatism:0 "Burmese"
- BUR_nationalism_ADJ:0 "Burma"
- BUR_nationalism_DEF:0 "The Burmese"
- BUR_nationalism:0 "Burmese"
+ BUR_vanguardism_ADJ:0 "Burmese"
+ BUR_vanguardism_DEF:0 "The Burma"
+ BUR_vanguardism:0 "Burma"
+ BUR_syndicalism_ADJ:0 "Burmese"
+ BUR_syndicalism_DEF:0 "The Burma"
+ BUR_syndicalism:0 "Burma"
+ BUR_socialism_ADJ:0 "Burmese"
+ BUR_socialism_DEF:0 "The Burma"
+ BUR_socialism:0 "Burma"
+ BUR_conservatism_ADJ:0 "Burmese"
+ BUR_conservatism_DEF:0 "The British Burma"
+ BUR_conservatism:0 "British Burma"
+ BUR_nationalism_ADJ:0 "Burmese"
+ BUR_nationalism_DEF:0 "The Burma"
+ BUR_nationalism:0 "Burma"
  #####################################################################################
- CAF_vanguardism_ADJ:0 "Deutsche Kolonialgesellschaft"
- CAF_vanguardism_DEF:0 "The German-African"
- CAF_vanguardism:0 "German-African"
- CAF_syndicalism_ADJ:0 "Deutsche Kolonialgesellschaft"
- CAF_syndicalism_DEF:0 "The German-African"
- CAF_syndicalism:0 "German-African"
- CAF_socialism_ADJ:0 "Deutsche Kolonialgesellschaft"
- CAF_socialism_DEF:0 "The German-African"
- CAF_socialism:0 "German-African"
- CAF_conservatism_ADJ:0 "Deutsche Kolonialgesellschaft"
- CAF_conservatism_DEF:0 "The German-African"
- CAF_conservatism:0 "German-African"
- CAF_nationalism_ADJ:0 "Deutsche Kolonialgesellschaft"
- CAF_nationalism_DEF:0 "The German-African"
- CAF_nationalism:0 "German-African"
+ CAF_vanguardism_ADJ:0 "German-African"
+ CAF_vanguardism_DEF:0 "The Deutsche Kolonialgesellschaft"
+ CAF_vanguardism:0 "Deutsche Kolonialgesellschaft"
+ CAF_syndicalism_ADJ:0 "German-African"
+ CAF_syndicalism_DEF:0 "The Deutsche Kolonialgesellschaft"
+ CAF_syndicalism:0 "Deutsche Kolonialgesellschaft"
+ CAF_socialism_ADJ:0 "German-African"
+ CAF_socialism_DEF:0 "The Deutsche Kolonialgesellschaft"
+ CAF_socialism:0 "Deutsche Kolonialgesellschaft"
+ CAF_conservatism_ADJ:0 "German-African"
+ CAF_conservatism_DEF:0 "The Deutsche Kolonialgesellschaft"
+ CAF_conservatism:0 "Deutsche Kolonialgesellschaft"
+ CAF_nationalism_ADJ:0 "German-African"
+ CAF_nationalism_DEF:0 "The Deutsche Kolonialgesellschaft"
+ CAF_nationalism:0 "Deutsche Kolonialgesellschaft"
  #####################################################################################
  CAN_vanguardism_ADJ:0 "Canadian"
  CAN_vanguardism_DEF:0 "The Dominion of Canada"
@@ -378,8 +346,8 @@
  CRO_socialism_DEF:0 "The Triune"
  CRO_socialism:0 "Triune"
  CRO_conservatism_ADJ:0 "Croatian"
- CRO_conservatism_DEF:0 "The Triune"
- CRO_conservatism:0 "Triune"
+ CRO_conservatism_DEF:0 "The Triune Kingdom"
+ CRO_conservatism:0 "Triune Kingdom"
  CRO_nationalism_ADJ:0 "Croatian"
  CRO_nationalism_DEF:0 "The Triune"
  CRO_nationalism:0 "Triune"
@@ -394,27 +362,27 @@
  CUB_socialism_DEF:0 "The Caribbean"
  CUB_socialism:0 "Caribbean"
  CUB_conservatism_ADJ:0 "Caribbean"
- CUB_conservatism_DEF:0 "The Caribbean"
- CUB_conservatism:0 "Caribbean"
+ CUB_conservatism_DEF:0 "The Caribbean Confederation"
+ CUB_conservatism:0 "Caribbean Confederation"
  CUB_nationalism_ADJ:0 "Caribbean"
  CUB_nationalism_DEF:0 "The Caribbean"
  CUB_nationalism:0 "Caribbean"
  #####################################################################################
- DEN_vanguardism_ADJ:0 "Denmark"
- DEN_vanguardism_DEF:0 "The Danish"
- DEN_vanguardism:0 "Danish"
- DEN_syndicalism_ADJ:0 "Denmark"
- DEN_syndicalism_DEF:0 "The Danish"
- DEN_syndicalism:0 "Danish"
- DEN_socialism_ADJ:0 "Denmark"
- DEN_socialism_DEF:0 "The Danish"
- DEN_socialism:0 "Danish"
- DEN_conservatism_ADJ:0 "Denmark"
- DEN_conservatism_DEF:0 "The Danish"
- DEN_conservatism:0 "Danish"
- DEN_nationalism_ADJ:0 "Denmark"
- DEN_nationalism_DEF:0 "The Danish"
- DEN_nationalism:0 "Danish"
+ DEN_vanguardism_ADJ:0 "Danish"
+ DEN_vanguardism_DEF:0 "The Denmark"
+ DEN_vanguardism:0 "Denmark"
+ DEN_syndicalism_ADJ:0 "Danish"
+ DEN_syndicalism_DEF:0 "The Denmark"
+ DEN_syndicalism:0 "Denmark"
+ DEN_socialism_ADJ:0 "Danish"
+ DEN_socialism_DEF:0 "The Denmark"
+ DEN_socialism:0 "Denmark"
+ DEN_conservatism_ADJ:0 "Danish"
+ DEN_conservatism_DEF:0 "The Denmark"
+ DEN_conservatism:0 "Denmark"
+ DEN_nationalism_ADJ:0 "Danish"
+ DEN_nationalism_DEF:0 "The Denmark"
+ DEN_nationalism:0 "Denmark"
  #####################################################################################
  ECU_vanguardism_ADJ:0 "Ecuador"
  ECU_vanguardism_DEF:0 "The Ecuadorian"
@@ -432,21 +400,21 @@
  ECU_nationalism_DEF:0 "The Ecuadorian"
  ECU_nationalism:0 "Ecuadorian"
  #####################################################################################
- EIN_vanguardism_ADJ:0 "Vereenigde Oostindische Compagnie"
- EIN_vanguardism_DEF:0 "The Dutch-Indonesian"
- EIN_vanguardism:0 "Dutch-Indonesian"
- EIN_syndicalism_ADJ:0 "Vereenigde Oostindische Compagnie"
- EIN_syndicalism_DEF:0 "The Dutch-Indonesian"
- EIN_syndicalism:0 "Dutch-Indonesian"
- EIN_socialism_ADJ:0 "Vereenigde Oostindische Compagnie"
- EIN_socialism_DEF:0 "The Dutch-Indonesian"
- EIN_socialism:0 "Dutch-Indonesian"
- EIN_conservatism_ADJ:0 "Vereenigde Oostindische Compagnie"
- EIN_conservatism_DEF:0 "The Dutch-Indonesian"
- EIN_conservatism:0 "Dutch-Indonesian"
- EIN_nationalism_ADJ:0 "Vereenigde Oostindische Compagnie"
- EIN_nationalism_DEF:0 "The Dutch-Indonesian"
- EIN_nationalism:0 "Dutch-Indonesian"
+ EIN_vanguardism_ADJ:0 "Dutch-Indonesian"
+ EIN_vanguardism_DEF:0 "The Vereenigde Oostindische Compagnie"
+ EIN_vanguardism:0 "Vereenigde Oostindische Compagnie"
+ EIN_syndicalism_ADJ:0 "Dutch-Indonesian"
+ EIN_syndicalism_DEF:0 "The Vereenigde Oostindische Compagnie"
+ EIN_syndicalism:0 "Vereenigde Oostindische Compagnie"
+ EIN_socialism_ADJ:0 "Dutch-Indonesian"
+ EIN_socialism_DEF:0 "The Vereenigde Oostindische Compagnie"
+ EIN_socialism:0 "Vereenigde Oostindische Compagnie"
+ EIN_conservatism_ADJ:0 "Dutch-Indonesian"
+ EIN_conservatism_DEF:0 "The Vereenigde Oostindische Compagnie"
+ EIN_conservatism:0 "Vereenigde Oostindische Compagnie"
+ EIN_nationalism_ADJ:0 "Dutch-Indonesian"
+ EIN_nationalism_DEF:0 "The Vereenigde Oostindische Compagnie"
+ EIN_nationalism:0 "Vereenigde Oostindische Compagnie"
  #####################################################################################
  FIN_vanguardism_ADJ:0 "Finnish"
  FIN_vanguardism_DEF:0 "The Finland"
@@ -465,8 +433,8 @@
  FIN_nationalism:0 "Finland"
  #####################################################################################
  FRA_vanguardism_ADJ:0 "French"
- FRA_vanguardism_DEF:0 "The France"
- FRA_vanguardism:0 "France"
+ FRA_vanguardism_DEF:0 "The Communard France"
+ FRA_vanguardism:0 "Communard France"
  FRA_syndicalism_ADJ:0 "French"
  FRA_syndicalism_DEF:0 "The France"
  FRA_syndicalism:0 "France"
@@ -522,15 +490,15 @@
  GRE_socialism_DEF:0 "The Hellas"
  GRE_socialism:0 "Hellas"
  GRE_conservatism_ADJ:0 "Greek"
- GRE_conservatism_DEF:0 "The Hellas"
- GRE_conservatism:0 "Hellas"
+ GRE_conservatism_DEF:0 "The Megali Hellas"
+ GRE_conservatism:0 "Megali Hellas"
  GRE_nationalism_ADJ:0 "Greek"
  GRE_nationalism_DEF:0 "The Hellas"
  GRE_nationalism:0 "Hellas"
  #####################################################################################
  HUN_vanguardism_ADJ:0 "Hungarian"
- HUN_vanguardism_DEF:0 "The Hungary"
- HUN_vanguardism:0 "Hungary"
+ HUN_vanguardism_DEF:0 "The Hungarian People's Republic"
+ HUN_vanguardism:0 "Hungarian People's Republic"
  HUN_syndicalism_ADJ:0 "Hungarian"
  HUN_syndicalism_DEF:0 "The Hungary"
  HUN_syndicalism:0 "Hungary"
@@ -554,8 +522,8 @@
  ICH_socialism_DEF:0 "The Indochina"
  ICH_socialism:0 "Indochina"
  ICH_conservatism_ADJ:0 "Indochinese"
- ICH_conservatism_DEF:0 "The Indochina"
- ICH_conservatism:0 "Indochina"
+ ICH_conservatism_DEF:0 "The British Indochina"
+ ICH_conservatism:0 "British Indochina"
  ICH_nationalism_ADJ:0 "Indochinese"
  ICH_nationalism_DEF:0 "The Indochina"
  ICH_nationalism:0 "Indochina"
@@ -570,8 +538,8 @@
  IND_socialism_DEF:0 "The India"
  IND_socialism:0 "India"
  IND_conservatism_ADJ:0 "Indian"
- IND_conservatism_DEF:0 "The India"
- IND_conservatism:0 "India"
+ IND_conservatism_DEF:0 "The British Raj"
+ IND_conservatism:0 "British Raj"
  IND_nationalism_ADJ:0 "Indian"
  IND_nationalism_DEF:0 "The India"
  IND_nationalism:0 "India"
@@ -605,8 +573,8 @@
  JAP_conservatism_DEF:0 "The Japan"
  JAP_conservatism:0 "Japan"
  JAP_nationalism_ADJ:0 "Japanese"
- JAP_nationalism_DEF:0 "The Japan"
- JAP_nationalism:0 "Japan"
+ JAP_nationalism_DEF:0 "The Tokugawa Shogunate"
+ JAP_nationalism:0 "Tokugawa Shogunate"
  #####################################################################################
  KOR_vanguardism_ADJ:0 "Korean"
  KOR_vanguardism_DEF:0 "The Korea"
@@ -628,8 +596,8 @@
  MAG_vanguardism_DEF:0 "The Maghreb"
  MAG_vanguardism:0 "Maghreb"
  MAG_syndicalism_ADJ:0 "Maghrebi"
- MAG_syndicalism_DEF:0 "The Maghreb"
- MAG_syndicalism:0 "Maghreb"
+ MAG_syndicalism_DEF:0 "The Maghreb Union"
+ MAG_syndicalism:0 "Maghreb Union"
  MAG_socialism_ADJ:0 "Maghrebi"
  MAG_socialism_DEF:0 "The Maghreb"
  MAG_socialism:0 "Maghreb"
@@ -650,8 +618,8 @@
  MAL_socialism_DEF:0 "The Malaya"
  MAL_socialism:0 "Malaya"
  MAL_conservatism_ADJ:0 "Malayan"
- MAL_conservatism_DEF:0 "The Malaya"
- MAL_conservatism:0 "Malaya"
+ MAL_conservatism_DEF:0 "The British Malaya"
+ MAL_conservatism:0 "British Malaya"
  MAL_nationalism_ADJ:0 "Malayan"
  MAL_nationalism_DEF:0 "The Malaya"
  MAL_nationalism:0 "Malaya"
@@ -676,8 +644,8 @@
  MEX_vanguardism_DEF:0 "The Mexico"
  MEX_vanguardism:0 "Mexico"
  MEX_syndicalism_ADJ:0 "Mexican"
- MEX_syndicalism_DEF:0 "The Mexico"
- MEX_syndicalism:0 "Mexico"
+ MEX_syndicalism_DEF:0 "The Confederación de Trabajadores de México"
+ MEX_syndicalism:0 "Confederación de Trabajadores de México"
  MEX_socialism_ADJ:0 "Mexican"
  MEX_socialism_DEF:0 "The Mexico"
  MEX_socialism:0 "Mexico"
@@ -733,8 +701,8 @@
  NEL_conservatism_DEF:0 "The Netherlands"
  NEL_conservatism:0 "Netherlands"
  NEL_nationalism_ADJ:0 "Dutch"
- NEL_nationalism_DEF:0 "The Netherlands"
- NEL_nationalism:0 "Netherlands"
+ NEL_nationalism_DEF:0 "The Duitsland"
+ NEL_nationalism:0 "Duitsland"
  #####################################################################################
  NOR_vanguardism_ADJ:0 "Norwegian"
  NOR_vanguardism_DEF:0 "The Norway"
@@ -922,8 +890,8 @@
  RUS_socialism_DEF:0 "The Russia"
  RUS_socialism:0 "Russia"
  RUS_conservatism_ADJ:0 "Russian"
- RUS_conservatism_DEF:0 "The Russia"
- RUS_conservatism:0 "Russia"
+ RUS_conservatism_DEF:0 "The Russian Empire"
+ RUS_conservatism:0 "Russian Empire"
  RUS_nationalism_ADJ:0 "Russian"
  RUS_nationalism_DEF:0 "The Russia"
  RUS_nationalism:0 "Russia"
@@ -938,8 +906,8 @@
  SAF_socialism_DEF:0 "The South Africa"
  SAF_socialism:0 "South Africa"
  SAF_conservatism_ADJ:0 "South African"
- SAF_conservatism_DEF:0 "The South Africa"
- SAF_conservatism:0 "South Africa"
+ SAF_conservatism_DEF:0 "The Union of South Africa"
+ SAF_conservatism:0 "Union of South Africa"
  SAF_nationalism_ADJ:0 "South African"
  SAF_nationalism_DEF:0 "The South Africa"
  SAF_nationalism:0 "South Africa"
@@ -954,8 +922,8 @@
  SAU_socialism_DEF:0 "The Hashemite"
  SAU_socialism:0 "Hashemite"
  SAU_conservatism_ADJ:0 "Arab"
- SAU_conservatism_DEF:0 "The Hashemite"
- SAU_conservatism:0 "Hashemite"
+ SAU_conservatism_DEF:0 "The Hashemite Kingdom"
+ SAU_conservatism:0 "Hashemite Kingdom"
  SAU_nationalism_ADJ:0 "Arab"
  SAU_nationalism_DEF:0 "The Hashemite"
  SAU_nationalism:0 "Hashemite"
@@ -1009,8 +977,8 @@
  SIA_nationalism:0 "Siam"
  #####################################################################################
  SOV_vanguardism_ADJ:0 "Russian"
- SOV_vanguardism_DEF:0 "The Soviet Russia"
- SOV_vanguardism:0 "Soviet Russia"
+ SOV_vanguardism_DEF:0 "The Russian SFSR"
+ SOV_vanguardism:0 "Russian SFSR"
  SOV_syndicalism_ADJ:0 "Russian"
  SOV_syndicalism_DEF:0 "The Soviet Russia"
  SOV_syndicalism:0 "Soviet Russia"
@@ -1073,8 +1041,8 @@
  SWI_nationalism:0 "Switzerland"
  ##########################################
  TAN_vanguardism_ADJ:0 "Tuvan"
- TAN_vanguardism_DEF:0 "The Tuvan"
- TAN_vanguardism:0 "Tuvan"
+ TAN_vanguardism_DEF:0 "The Tuvan People's Republic"
+ TAN_vanguardism:0 "Tuvan People's Republic"
  TAN_syndicalism_ADJ:0 "Tuvan"
  TAN_syndicalism_DEF:0 "The Tuvan"
  TAN_syndicalism:0 "Tuvan"
@@ -1095,8 +1063,8 @@
  TCS_syndicalism_DEF:0 "The Transcaucasia"
  TCS_syndicalism:0 "Transcaucasia"
  TCS_socialism_ADJ:0 "Transcaucasian"
- TCS_socialism_DEF:0 "The Transcaucasia"
- TCS_socialism:0 "Transcaucasia"
+ TCS_socialism_DEF:0 "The Transcaucasian DFR"
+ TCS_socialism:0 "Transcaucasian DFR"
  TCS_conservatism_ADJ:0 "Transcaucasian"
  TCS_conservatism_DEF:0 "The Transcaucasia"
  TCS_conservatism:0 "Transcaucasia"
@@ -1111,8 +1079,8 @@
  UAR_syndicalism_DEF:0 "The United Arab"
  UAR_syndicalism:0 "United Arab"
  UAR_socialism_ADJ:0 "Arab"
- UAR_socialism_DEF:0 "The United Arab"
- UAR_socialism:0 "United Arab"
+ UAR_socialism_DEF:0 "The United Arab Republic"
+ UAR_socialism:0 "United Arab Republic"
  UAR_conservatism_ADJ:0 "Arab"
  UAR_conservatism_DEF:0 "The United Arab"
  UAR_conservatism:0 "United Arab"
@@ -1130,8 +1098,8 @@
  UKR_socialism_DEF:0 "The Ukraine"
  UKR_socialism:0 "Ukraine"
  UKR_conservatism_ADJ:0 "Ukrainian"
- UKR_conservatism_DEF:0 "The Ukraine"
- UKR_conservatism:0 "Ukraine"
+ UKR_conservatism_DEF:0 "The Hetmanate"
+ UKR_conservatism:0 "Hetmanate"
  UKR_nationalism_ADJ:0 "Ukrainian"
  UKR_nationalism_DEF:0 "The Ukraine"
  UKR_nationalism:0 "Ukraine"
@@ -1188,8 +1156,8 @@
  VEN_vanguardism_DEF:0 "The Venezuela"
  VEN_vanguardism:0 "Venezuela"
  VEN_syndicalism_ADJ:0 "Venezuelan"
- VEN_syndicalism_DEF:0 "The Venezuela"
- VEN_syndicalism:0 "Venezuela"
+ VEN_syndicalism_DEF:0 "The Bolivarian Syndicate"
+ VEN_syndicalism:0 "Bolivarian Syndicate"
  VEN_socialism_ADJ:0 "Venezuelan"
  VEN_socialism_DEF:0 "The Venezuela"
  VEN_socialism:0 "Venezuela"
@@ -1210,8 +1178,8 @@
  WAF_socialism_DEF:0 "The West Africa"
  WAF_socialism:0 "West Africa"
  WAF_conservatism_ADJ:0 "West African"
- WAF_conservatism_DEF:0 "The West Africa"
- WAF_conservatism:0 "West Africa"
+ WAF_conservatism_DEF:0 "The British West Africa"
+ WAF_conservatism:0 "British West Africa"
  WAF_nationalism_ADJ:0 "West African"
  WAF_nationalism_DEF:0 "The West Africa"
  WAF_nationalism:0 "West Africa"
