--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,2 +1,19 @@
 ﻿l_english:
- 
+ BAL_schutzgebiet_conservatism_ADJ:0 "Baltic"
+ BAL_schutzgebiet_conservatism_DEF:0 "The Schutzgebiet Baltikum"
+ BAL_schutzgebiet_conservatism:0 "Schutzgebiet Baltikum"
+ BEL_schutzgebiet_conservatism_ADJ:0 "Belgian"
+ BEL_schutzgebiet_conservatism_DEF:0 "The Schutzgebiet Belgien"
+ BEL_schutzgebiet_conservatism:0 "Schutzgebiet Belgien"
+ FIN_schutzgebiet_conservatism_ADJ:0 "Finnish"
+ FIN_schutzgebiet_conservatism_DEF:0 "The Schutzgebiet Finnland"
+ FIN_schutzgebiet_conservatism:0 "Schutzgebiet Finnland"
+ GAM_schutzgebiet_conservatism_ADJ:0 "German-American"
+ GAM_schutzgebiet_conservatism_DEF:0 "The Schutzgebiet Amerika"
+ GAM_schutzgebiet_conservatism:0 "Schutzgebiet Amerika"
+ NEL_schutzgebiet_conservatism_ADJ:0 "Dutch"
+ NEL_schutzgebiet_conservatism_DEF:0 "The Schutzgebiet Niederlande"
+ NEL_schutzgebiet_conservatism:0 "Schutzgebiet Niederlande"
+ MAG_schutzgebiet_conservatism_ADJ:0 "Maghrebi"
+ MAG_schutzgebiet_conservatism_DEF:0 "The Schutzgebiet Maghreb"
+ MAG_schutzgebiet_conservatism:0 "Schutzgebiet Maghreb"
