--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -1,12 +1,8 @@
 ﻿l_english:
- vanguardism:0 "Revolutionary Vanguardism"
- vanguardism_noun:0 "Revolutionary Vanguardist"
- vanguardist_desc:0 "A revolutionary vanguardist regime"
- vanguardism_desc:0 "Revolutionary Vanguardism"
- syndicalism:0 "Anarcho-syndicalism"
- syndicalism_noun:0 "Anarcho-syndicalist"
- syndicalist_desc:0 "An anarcho-syndicalist regime"
- syndicalism_desc:0 "Anarcho-syndicalism"
+ syndicalism:0 "Revolutionary Syndicalism"
+ syndicalism_noun:0 "Revolutionary Syndicalist"
+ syndicalist_desc:0 "A revolutionary syndicalist regime"
+ syndicalism_desc:0 "Revolutionary Syndicalism"
  socialism:0 "Liberal Socialism"
  socialism_noun:0 "Liberal Socialist"
  socialist_desc:0 "A liberal socialist regime"
@@ -19,5 +15,40 @@
  nationalism_noun:0 "Totalitarian Nationalist"
  nationalist_desc:0 "A totalitarian nationalist regime"
  nationalism_desc:0 "Totalitarian Nationalism"
- ALB_conservatism_party:0 "short test"
- ALB_conservatism_party_long:0 "long test"
+ ##################################
+ AFG_syndicalism_party:0 "YAP"
+ AFG_syndicalism_party_long:0 "Young Afghan Party"
+ AFG_socialism_party:0 "YAP"
+ AFG_socialism_party_long:0 "Young Afghan Party"
+ AFG_conservatism_party:0 "Barakzai"
+ AFG_conservatism_party_long:0 "Barakzai"
+ AFG_nationalism_party:0 "Barakzai"
+ AFG_nationalism_party_long:0 "Barakzai"
+ #################################
+ ALB_syndicalism_party:0 "PPSH"
+ ALB_syndicalism_party_long:0 "Partia e Punës e Shqipërisë"
+ ALB_socialism_party:0 "PPA"
+ ALB_socialism_party_long:0 "Progressive Party of Albania"
+ ALB_conservatism_party:0 "CPA"
+ ALB_conservatism_party_long:0 "Conservative Party of Albania"
+ ALB_nationalism_party:0 "PFSh"
+ ALB_nationalism_party_long:0 "Partia Fashiste e Shqipërisë"
+ #################################
+ ARG_syndicalism_party:0 "PC"
+ ARG_syndicalism_party_long:0 "Partido Comunista de la Argentina"
+ ARG_socialism_party:0 "UCR"
+ ARG_socialism_party_long:0 "Unión Cívica Radical"
+ ARG_conservatism_party:0 "PDN"
+ ARG_conservatism_party_long:0 "Partido Demócrata Nacional"
+ ARG_nationalism_party:0 "LCA"
+ ARG_nationalism_party_long:0 "Legión Cívica Argentina"
+ #################################
+ AAA_syndicalism_party:0 "short"
+ AAA_syndicalism_party_long:0 "long"
+ AAA_socialism_party:0 "short"
+ AAA_socialism_party_long:0 "long"
+ AAA_conservatism_party:0 "short"
+ AAA_conservatism_party_long:0 "long"
+ AAA_nationalism_party:0 "short"
+ AAA_nationalism_party_long:0 "long"
+ #################################
