--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -67,17 +67,17 @@
  BAL_socialism_party_long:0 "Latvijas Sociāldemokrātiskā Strādnieku Partija"
  BAL_conservatism_party:0 "ADP"
  BAL_conservatism_party_long:0 "Ausschuß der Deutschbaltischen Parteien"
- BAL_nationalism_party:0 "EVL"
- BAL_nationalism_party_long:0 "Eesti Vabadussõjalaste Liit"
+ BAL_nationalism_party:0 "Pērkonkrusts"
+ BAL_nationalism_party_long:0 "Pērkonkrusts"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_socialism_party:0 "short"
- AAA_socialism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ BEL_syndicalism_party:0 "FGTB"
+ BEL_syndicalism_party_long:0 "Fédération générale du travail de Belgique"
+ BEL_socialism_party:0 "POB"
+ BEL_socialism_party_long:0 "Parti Ouvrier Belge"
+ BEL_conservatism_party:0 "Pc"
+ BEL_conservatism_party_long:0 "Parti catholique"
+ BEL_nationalism_party:0 "PR"
+ BEL_nationalism_party_long:0 "Parti Rexiste"
  #################################
  AAA_syndicalism_party:0 "short"
  AAA_syndicalism_party_long:0 "long"
