--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -1,17 +1,17 @@
 ﻿l_english:
- syndicalism:0 "Revolutionary Syndicalism"
+ syndicalism:0 "Syndicalism"
  syndicalism_noun:0 "Revolutionary Syndicalist"
  syndicalist_desc:0 "A revolutionary syndicalist regime"
  syndicalism_desc:0 "Revolutionary Syndicalism"
- socialism:0 "Liberal Socialism"
+ socialism:0 "Socialism"
  socialism_noun:0 "Liberal Socialist"
  socialist_desc:0 "A liberal socialist regime"
  socialism_desc:0 "Liberal Socialism"
- conservatism:0 "Authoritarian Conservatism"
+ conservatism:0 "Conservatism"
  conservatism_noun:0 "Authoritarian Conservatist"
  conservatistic_desc:0 "An authoritarian conservatistic regime"
  conservatism_desc:0 "Authoritarian Conservatism"
- nationalism:0 "Totalitarian Nationalism"
+ nationalism:0 "Nationalism"
  nationalism_noun:0 "Totalitarian Nationalist"
  nationalist_desc:0 "A totalitarian nationalist regime"
  nationalism_desc:0 "Totalitarian Nationalism"
@@ -79,14 +79,14 @@
  BEL_nationalism_party:0 "PR"
  BEL_nationalism_party_long:0 "Parti Rexiste"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_socialism_party:0 "short"
- AAA_socialism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ BLR_syndicalism_party:0 "LKP"
+ BLR_syndicalism_party_long:0 "Lietuvos komunistų partija"
+ BLR_socialism_party:0 "LSLDP"
+ BLR_socialism_party_long:0 "Lietuvos socialistų liaudininkų demokratų partija"
+ BLR_conservatism_party:0 "LKDP"
+ BLR_conservatism_party_long:0 "Lietuvos krikščionių demokratų partija"
+ BLR_nationalism_party:0 "LTS"
+ BLR_nationalism_party_long:0 "Lietuvių tautininkų sąjunga"
  #################################
  AAA_syndicalism_party:0 "short"
  AAA_syndicalism_party_long:0 "long"
