--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -665,10 +665,10 @@
  escort_effort_focus:0 "Escort Effort"
  comintern_influence:0 "Comintern influence"
  progress_cult_focus:0 "Progress Cult"
- socialist_science_focus:0 "Socialist Science"
+ radicalist_science_focus:0 "Socialist Science"
  peoples_commissariat_focus:0 "People's Commissariat of Defense Industry"
  home_of_revolution:0 "Home of the Revolution"
- home_of_revolution_desc:0 "Comrades, with the defeat of the vile Trotskyite counter revolutionaries we were able to focus on defending the revolution. Our goal, our hope, our slogan is Socialism in One Country. We will build a bountiful socialist utopia here in the Soviet Union and the rest of the world will inevitably embrace it."
+ home_of_revolution_desc:0 "Comrades, with the defeat of the vile Trotskyite counter revolutionaries we were able to focus on defending the revolution. Our goal, our hope, our slogan is Socialism in One Country. We will build a bountiful radicalist utopia here in the Soviet Union and the rest of the world will inevitably embrace it."
  en_svensk_tiger:0 "En Svensk Tiger"
  en_svensk_tiger_desc:0 "If Sweden is to be like a tiger on the prowl then those who spy on us must not know what we do. In these time of conflict and strife it is the patriotic duty of every Swede to keep silent."
  state_shintoism:0 "State Shintoism"
@@ -2524,3 +2524,5 @@
  MAN_western_refinery:0 "Western Refinery"
  MAN_showa_steel_works:0 "Anshan Steel Works"
  CHI_illegal_regime:0 "Illegal Regime"
+ ####################### PYRRHUSSIEG #################################
+ ps_default:0 "Pyrrhussieg"
