--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -20,9 +20,9 @@
  AFG_syndicalism_party_long:0 "Young Afghan Party"
  AFG_radicalism_party:0 "YAP"
  AFG_radicalism_party_long:0 "Young Afghan Party"
- AFG_conservatism_party:0 "Barakzai"
+ AFG_conservatism_party:0 "BKZ"
  AFG_conservatism_party_long:0 "Barakzai"
- AFG_nationalism_party:0 "Barakzai"
+ AFG_nationalism_party:0 "BKZ"
  AFG_nationalism_party_long:0 "Barakzai"
  #################################
  ALB_syndicalism_party:0 "PPSH"
@@ -34,8 +34,8 @@
  ALB_nationalism_party:0 "PFSh"
  ALB_nationalism_party_long:0 "Partia Fashiste e Shqipërisë"
  #################################
- ARG_syndicalism_party:0 "PC"
- ARG_syndicalism_party_long:0 "Partido Comunista de la Argentina"
+ ARG_syndicalism_party:0 "FORA"
+ ARG_syndicalism_party_long:0 "Federación Obrera Regional Argentina"
  ARG_radicalism_party:0 "UCR"
  ARG_radicalism_party_long:0 "Unión Cívica Radical"
  ARG_conservatism_party:0 "PDN"
@@ -74,7 +74,7 @@
  BEL_syndicalism_party_long:0 "Fédération générale du travail de Belgique"
  BEL_radicalism_party:0 "POB"
  BEL_radicalism_party_long:0 "Parti Ouvrier Belge"
- BEL_conservatism_party:0 "Pc"
+ BEL_conservatism_party:0 "PC"
  BEL_conservatism_party_long:0 "Parti catholique"
  BEL_nationalism_party:0 "PR"
  BEL_nationalism_party_long:0 "Parti Rexiste"
@@ -88,32 +88,32 @@
  BLR_nationalism_party:0 "LTS"
  BLR_nationalism_party_long:0 "Lietuvių tautininkų sąjunga"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_radicalism_party:0 "short"
- AAA_radicalism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ BOL_syndicalism_party:0 "FSTMB"
+ BOL_syndicalism_party_long:0 "Federación Sindical de Trabajadores Mineros de Bolivia"
+ BOL_radicalism_party:0 "PL"
+ BOL_radicalism_party_long:0 "Partido Liberal"
+ BOL_conservatism_party:0 "PN"
+ BOL_conservatism_party_long:0 "Partido Nacionalista"
+ BOL_nationalism_party:0 "SM"
+ BOL_nationalism_party_long:0 "Socialismo Militar"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_radicalism_party:0 "short"
- AAA_radicalism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ BRA_syndicalism_party:0 "PPS"
+ BRA_syndicalism_party_long:0 "Partido Popular Sindicalista"
+ BRA_radicalism_party:0 "AL"
+ BRA_radicalism_party_long:0 "Aliança Liberal"
+ BRA_conservatism_party:0 "PRP"
+ BRA_conservatism_party_long:0 "Partido Republicano Paulista"
+ BRA_nationalism_party:0 "AIB"
+ BRA_nationalism_party_long:0 "Ação Integralista Brasileira"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_radicalism_party:0 "short"
- AAA_radicalism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ BRI_syndicalism_party:0 "TUC"
+ BRI_syndicalism_party_long:0 "Trades Union Congress"
+ BRI_radicalism_party:0 "LP"
+ BRI_radicalism_party_long:0 "Labour Party"
+ BRI_conservatism_party:0 "CUP"
+ BRI_conservatism_party_long:0 "Conservative and Unionist Party"
+ BRI_nationalism_party:0 "IFL"
+ BRI_nationalism_party_long:0 "Imperial Fascist League"
  #################################
  AAA_syndicalism_party:0 "short"
  AAA_syndicalism_party_long:0 "long"
