--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -115,32 +115,32 @@
  BRI_nationalism_party:0 "IFL"
  BRI_nationalism_party_long:0 "Imperial Fascist League"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_radicalism_party:0 "short"
- AAA_radicalism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ BUK_syndicalism_party:0 "YB"
+ BUK_syndicalism_party_long:0 "Yosh buxoroliklar"
+ BUK_radicalism_party:0 "YB"
+ BUK_radicalism_party_long:0 "Yosh buxoroliklar"
+ BUK_conservatism_party:0 "MD"
+ BUK_conservatism_party_long:0 "Manghud Dynasty"
+ BUK_nationalism_party:0 "YB"
+ BUK_nationalism_party_long:0 "Yosh buxoroliklar"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_radicalism_party:0 "short"
- AAA_radicalism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ BUL_syndicalism_party:0 "BKP"
+ BUL_syndicalism_party_long:0 "Bâlgarska Komunisticheska Partiya"
+ BUL_radicalism_party:0 "DP"
+ BUL_radicalism_party_long:0 "Demokraticheska partia"
+ BUL_conservatism_party:0 "Zveno"
+ BUL_conservatism_party_long:0 "Zveno"
+ BUL_nationalism_party:0 "SBNL"
+ BUL_nationalism_party_long:0 "Săjuz na Bălgarskite Nacionalni Legioni"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_radicalism_party:0 "short"
- AAA_radicalism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ BUR_syndicalism_party:0 "RFCP"
+ BUR_syndicalism_party_long:0 "Red Flag Communist Party"
+ BUR_radicalism_party:0 "DAA"
+ BUR_radicalism_party_long:0 "Dobama Asiayone"
+ BUR_conservatism_party:0 "GCBA"
+ BUR_conservatism_party_long:0 "General Council of Burmese Associations"
+ BUR_nationalism_party:0 "DSA"
+ BUR_nationalism_party_long:0 "Dobama-Sinyetha Asiayone"
  #################################
  AAA_syndicalism_party:0 "short"
  AAA_syndicalism_party_long:0 "long"
