--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -78,6 +78,19 @@
  BAL_nationalism_DEF:0 "The Deutsch-Baltikum"
  BAL_nationalism:0 "Deutsch-Baltikum"
  #####################################################################################
+ BAV_syndicalism_ADJ:0 "German"
+ BAV_syndicalism_DEF:0 "The Bavaria"
+ BAV_syndicalism:0 "Bavaria"
+ BAV_radicalism_ADJ:0 "German"
+ BAV_radicalism_DEF:0 "The Bavaria"
+ BAV_radicalism:0 "Bavaria"
+ BAV_conservatism_ADJ:0 "German"
+ BAV_conservatism_DEF:0 "The Bavaria"
+ BAV_conservatism:0 "Bavaria"
+ BAV_nationalism_ADJ:0 "German"
+ BAV_nationalism_DEF:0 "The Bavaria"
+ BAV_nationalism:0 "Bavaria"
+ #####################################################################################
  BEL_syndicalism_ADJ:0 "Belgian"
  BEL_syndicalism_DEF:0 "The Belgium"
  BEL_syndicalism:0 "Belgium"
@@ -312,31 +325,44 @@
  DEN_nationalism_DEF:0 "The Denmark"
  DEN_nationalism:0 "Denmark"
  #####################################################################################
- ECU_syndicalism_ADJ:0 "Ecuador"
- ECU_syndicalism_DEF:0 "The Ecuadorian"
- ECU_syndicalism:0 "Ecuadorian"
- ECU_radicalism_ADJ:0 "Ecuador"
- ECU_radicalism_DEF:0 "The Ecuadorian"
- ECU_radicalism:0 "Ecuadorian"
- ECU_conservatism_ADJ:0 "Ecuador"
- ECU_conservatism_DEF:0 "The Ecuadorian"
- ECU_conservatism:0 "Ecuadorian"
- ECU_nationalism_ADJ:0 "Ecuador"
- ECU_nationalism_DEF:0 "The Ecuadorian"
- ECU_nationalism:0 "Ecuadorian"
+ ECU_syndicalism_ADJ:0 "Ecuadorian"
+ ECU_syndicalism_DEF:0 "The Ecuador"
+ ECU_syndicalism:0 "Ecuador"
+ ECU_radicalism_ADJ:0 "Ecuadorian"
+ ECU_radicalism_DEF:0 "The Ecuador"
+ ECU_radicalism:0 "Ecuador"
+ ECU_conservatism_ADJ:0 "Ecuadorian"
+ ECU_conservatism_DEF:0 "The Ecuador"
+ ECU_conservatism:0 "Ecuador"
+ ECU_nationalism_ADJ:0 "Ecuadorian"
+ ECU_nationalism_DEF:0 "The Ecuador"
+ ECU_nationalism:0 "Ecuador"
  #####################################################################################
- EIN_syndicalism_ADJ:0 "Dutch-Indonesian"
- EIN_syndicalism_DEF:0 "The Vereenigde Oostindische Compagnie"
- EIN_syndicalism:0 "Vereenigde Oostindische Compagnie"
- EIN_radicalism_ADJ:0 "Dutch-Indonesian"
- EIN_radicalism_DEF:0 "The Vereenigde Oostindische Compagnie"
- EIN_radicalism:0 "Vereenigde Oostindische Compagnie"
- EIN_conservatism_ADJ:0 "Dutch-Indonesian"
- EIN_conservatism_DEF:0 "The Vereenigde Oostindische Compagnie"
- EIN_conservatism:0 "Vereenigde Oostindische Compagnie"
- EIN_nationalism_ADJ:0 "Dutch-Indonesian"
- EIN_nationalism_DEF:0 "The Vereenigde Oostindische Compagnie"
- EIN_nationalism:0 "Vereenigde Oostindische Compagnie"
+ EIN_syndicalism_ADJ:0 "German-Asian"
+ EIN_syndicalism_DEF:0 "The Deutsche Neuguinea-Kompagnie"
+ EIN_syndicalism:0 "Deutsche Neuguinea-Kompagnie"
+ EIN_radicalism_ADJ:0 "German-Asian"
+ EIN_radicalism_DEF:0 "The Deutsche Neuguinea-Kompagnie"
+ EIN_radicalism:0 "Deutsche Neuguinea-Kompagnie"
+ EIN_conservatism_ADJ:0 "German-Asian"
+ EIN_conservatism_DEF:0 "The Deutsche Neuguinea-Kompagnie"
+ EIN_conservatism:0 "Deutsche Neuguinea-Kompagnie"
+ EIN_nationalism_ADJ:0 "German-Asian"
+ EIN_nationalism_DEF:0 "The Deutsche Neuguinea-Kompagnie"
+ EIN_nationalism:0 "Deutsche Neuguinea-Kompagnie"
+ #####################################################################################
+ ELO_syndicalism_ADJ:0 "German"
+ ELO_syndicalism_DEF:0 "The Elsaß-Lothringen"
+ ELO_syndicalism:0 "Elsaß-Lothringen"
+ ELO_radicalism_ADJ:0 "German"
+ ELO_radicalism_DEF:0 "The Elsaß-Lothringen"
+ ELO_radicalism:0 "Elsaß-Lothringen"
+ ELO_conservatism_ADJ:0 "German"
+ ELO_conservatism_DEF:0 "The Elsaß-Lothringen"
+ ELO_conservatism:0 "Elsaß-Lothringen"
+ ELO_nationalism_ADJ:0 "German"
+ ELO_nationalism_DEF:0 "The Elsaß-Lothringen"
+ ELO_nationalism:0 "Elsaß-Lothringen"
  #####################################################################################
  FIN_syndicalism_ADJ:0 "Finnish"
  FIN_syndicalism_DEF:0 "The Finland"
