--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -67,7 +67,7 @@
  BAL_radicalism_party_long:0 "Latvijas Sociāldemokrātiskā Strādnieku Partija"
  BAL_conservatism_party:0 "ADP"
  BAL_conservatism_party_long:0 "Ausschuß der Deutschbaltischen Parteien"
- BAL_nationalism_party:0 "Pērkonkrusts"
+ BAL_nationalism_party:0 "PK"
  BAL_nationalism_party_long:0 "Pērkonkrusts"
  #################################
  BEL_syndicalism_party:0 "FGTB"
@@ -127,7 +127,7 @@
  BUL_syndicalism_party:0 "BKP"
  BUL_syndicalism_party_long:0 "Bâlgarska Komunisticheska Partiya"
  BUL_radicalism_party:0 "DP"
- BUL_radicalism_party_long:0 "Demokraticheska partia"
+ BUL_radicalism_party_long:0 "Demokraticheska Partiya"
  BUL_conservatism_party:0 "Zveno"
  BUL_conservatism_party_long:0 "Zveno"
  BUL_nationalism_party:0 "SBNL"
@@ -142,14 +142,14 @@
  BUR_nationalism_party:0 "DSA"
  BUR_nationalism_party_long:0 "Dobama-Sinyetha Asiayone"
  #################################
- AAA_syndicalism_party:0 "short"
- AAA_syndicalism_party_long:0 "long"
- AAA_radicalism_party:0 "short"
- AAA_radicalism_party_long:0 "long"
- AAA_conservatism_party:0 "short"
- AAA_conservatism_party_long:0 "long"
- AAA_nationalism_party:0 "short"
- AAA_nationalism_party_long:0 "long"
+ CAF_syndicalism_party:0 "DAP"
+ CAF_syndicalism_party_long:0 "Deutsche Afrikanische Partei"
+ CAF_radicalism_party:0 "DAP"
+ CAF_radicalism_party_long:0 "Deutsche Afrikanische Partei"
+ CAF_conservatism_party:0 "DAP"
+ CAF_conservatism_party_long:0 "Deutsche Afrikanische Partei"
+ CAF_nationalism_party:0 "DAP"
+ CAF_nationalism_party_long:0 "Deutsche Afrikanische Partei"
  #################################
  AAA_syndicalism_party:0 "short"
  AAA_syndicalism_party_long:0 "long"
