--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -953,14 +953,14 @@
  USY_syndicalism_DEF:0 "The United Syndicates"
  USY_syndicalism:0 "United Syndicates"
  USY_radicalism_ADJ:0 "American"
- USY_radicalism_DEF:0 "The United Syndicates"
- USY_radicalism:0 "United Syndicates"
+ USY_radicalism_DEF:0 "The United Midwestern States"
+ USY_radicalism:0 "United Midwestern States"
  USY_conservatism_ADJ:0 "American"
- USY_conservatism_DEF:0 "The United Syndicates"
- USY_conservatism:0 "United Syndicates"
+ USY_conservatism_DEF:0 "The United Midwestern States"
+ USY_conservatism:0 "United Midwestern States"
  USY_nationalism_ADJ:0 "American"
- USY_nationalism_DEF:0 "The United Syndicates"
- USY_nationalism:0 "United Syndicates"
+ USY_nationalism_DEF:0 "The United Midwestern States"
+ USY_nationalism:0 "United Midwestern States"
  ##########################################
  VEN_syndicalism_ADJ:0 "Venezuelan"
  VEN_syndicalism_DEF:0 "The Bolivarian Syndicate"
