--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -189,8 +189,8 @@
  BUL_radicalism_DEF:0 "The Bulgaria"
  BUL_radicalism:0 "Bulgaria"
  BUL_conservatism_ADJ:0 "Bulgarian"
- BUL_conservatism_DEF:0 "The Tsardom of Bulgaria"
- BUL_conservatism:0 "Tsardom of Bulgaria"
+ BUL_conservatism_DEF:0 "The Bulgaria"
+ BUL_conservatism:0 "Bulgaria"
  BUL_nationalism_ADJ:0 "Bulgarian"
  BUL_nationalism_DEF:0 "The Bulgaria"
  BUL_nationalism:0 "Bulgaria"
